--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -6,5 +6,5 @@
 <VBox xmlns:fx="http://javafx.com/fxml" fx:controller="mainpackage.Controller" alignment="CENTER">
     <Label text="Hello World"/>
     <Button text="GetStartet" onAction="#sayHello"/>
-
+    <Button text="GetStartet" onAction="#sayHello"/>
 </VBox>
