--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -1,10 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="mainpackage.Controller" alignment="BOTTOM_RIGHT">
-    <Label text="Hello World"/>
-    <Button text="GetStartet" onAction="#sayHello"/>
-    <Button text="GetStartet" onAction="#sayHello"/>
-</VBox>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <MenuBar prefHeight="61.0" prefWidth="600.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <Button fx:id="btLogin" layoutX="55.0" layoutY="270.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Login" />
+      <PasswordField fx:id="pbPassword" layoutX="55.0" layoutY="222.0" promptText="Password" />
+      <TextField fx:id="tbUsername" layoutX="55.0" layoutY="170.0" promptText="Username" />
+      <Button fx:id="btRegister" layoutX="144.0" layoutY="270.0" mnemonicParsing="false" text="Register" />
+      <Label layoutX="55.0" layoutY="106.0" text="Login">
+         <font>
+            <Font name="Yu Gothic UI Regular" size="36.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="341.0" fitWidth="339.0" layoutX="259.0" layoutY="59.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@SpeisenOase-Logo.jpg" />
+         </image>
+      </ImageView>
+   </children>
+</AnchorPane>
