--- a/src/main/resources/Login.fxml
+++ b/src/main/resources/Login.fxml
@@ -2,51 +2,62 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <MenuBar prefHeight="61.0" prefWidth="600.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-      <Button fx:id="btLogin" layoutX="55.0" layoutY="270.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Login" />
-      <PasswordField fx:id="pbPassword" layoutX="55.0" layoutY="222.0" promptText="Password" />
-      <TextField fx:id="tbUsername" layoutX="55.0" layoutY="170.0" promptText="Username" />
-      <Button fx:id="btRegister" layoutX="144.0" layoutY="270.0" mnemonicParsing="false" text="Register" />
-      <Label layoutX="55.0" layoutY="106.0" text="Login">
-         <font>
-            <Font name="Yu Gothic UI Regular" size="36.0" />
-         </font>
-      </Label>
-      <ImageView fitHeight="341.0" fitWidth="339.0" layoutX="259.0" layoutY="59.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@SpeisenOase-Logo.jpg" />
-         </image>
-      </ImageView>
-   </children>
-</AnchorPane>
+<BorderPane prefHeight="500.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <right>
+      <AnchorPane prefHeight="448.0" prefWidth="397.0" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="459.0" fitWidth="462.0" layoutX="-62.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@SpeisenOase-Logo.jpg" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+   </right>
+   <top>
+      <AnchorPane prefHeight="55.0" prefWidth="775.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="726.0" layoutY="15.0" mnemonicParsing="false" text="Exit" />
+         </children>
+      </AnchorPane>
+   </top>
+   <left>
+      <AnchorPane prefHeight="454.0" prefWidth="378.0" BorderPane.alignment="CENTER">
+         <children>
+            <PasswordField fx:id="pbPassword" layoutX="55.0" layoutY="226.0" prefHeight="40.0" prefWidth="176.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </PasswordField>
+            <Button fx:id="btLogin" layoutX="55.0" layoutY="295.0" mnemonicParsing="false"  prefHeight="28.0" prefWidth="67.0" style="-fx-background-color: #01212E;" text="Login" textFill="WHITE">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <TextField fx:id="tbUsername" layoutX="51.0" layoutY="153.0" prefHeight="43.0" prefWidth="184.0" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <Button fx:id="btRegister" layoutX="174.0" layoutY="295.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="70.0" style="-fx-background-color: #022235;" text="Register" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Label layoutX="77.0" layoutY="44.0" text="Login" textFill="#022235">
+               <font>
+                  <Font name="Yu Gothic UI Bold" size="52.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </left>
+</BorderPane>
