--- a/src/main/resources/Mainpage.fxml
+++ b/src/main/resources/Mainpage.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Mainpage">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21">
    <children>
       <MenuBar layoutX="1.0" layoutY="8.0" prefHeight="61.0" prefWidth="600.0">
          <menus>
