--- a/src/main/resources/Register.fxml
+++ b/src/main/resources/Register.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="500.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="500.0" prefWidth="667.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.ControllerRegister">
     <right>
         <AnchorPane prefHeight="448.0" prefWidth="397.0" BorderPane.alignment="CENTER">
             <children>
@@ -32,37 +32,37 @@
     <left>
         <AnchorPane prefHeight="454.0" prefWidth="378.0" BorderPane.alignment="CENTER">
             <children>
-                <PasswordField fx:id="pbPassword" layoutX="53.0" layoutY="182.0" prefHeight="17.0" prefWidth="174.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
+                <PasswordField fx:id="pbPassword" layoutX="70.0" layoutY="201.0" prefHeight="17.0" prefWidth="174.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </PasswordField>
-                <Button fx:id="btBack" layoutX="165.0" layoutY="290.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="67.0" style="-fx-background-color: #01212E;" text="Back" textFill="WHITE">
+                <Button fx:id="btBack" layoutX="182.0" layoutY="309.0" mnemonicParsing="false" onAction="#checkBackClick" prefHeight="28.0" prefWidth="67.0" style="-fx-background-color: #01212E;" text="Back" textFill="WHITE">
                     <font>
                         <Font size="15.0" />
                     </font>
                 </Button>
-                <TextField fx:id="tbUsername" layoutX="51.0" layoutY="86.0" prefHeight="27.0" prefWidth="177.0" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
+                <TextField fx:id="tbUsername" layoutX="68.0" layoutY="105.0" prefHeight="27.0" prefWidth="177.0" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
                <font>
                   <Font size="14.0" />
                </font>
                 </TextField>
-                <Button fx:id="btRegister" layoutX="56.0" layoutY="290.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="70.0" style="-fx-background-color: #022235;" text="Register" textFill="WHITE">
+                <Button fx:id="btRegister" layoutX="73.0" layoutY="309.0" mnemonicParsing="false" onAction="#checkRegisterClick" prefHeight="27.0" prefWidth="70.0" style="-fx-background-color: #022235;" text="Register" textFill="WHITE">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Button>
-                <Label layoutX="75.0" layoutY="14.0" prefHeight="45.0" prefWidth="136.0" text="Register" textFill="#022235">
+                <Label layoutX="81.0" layoutY="32.0" prefHeight="58.0" prefWidth="158.0" text="Register" textFill="#022235">
                     <font>
-                        <Font name="Yu Gothic UI Bold" size="34.0" />
+                        <Font name="Yu Gothic UI Bold" size="40.0" />
                     </font>
                 </Label>
-            <TextField fx:id="tbEmail" layoutX="55.0" layoutY="127.0" prefHeight="27.0" prefWidth="177.0" promptText="Emaill" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
+            <TextField fx:id="tbEmail" layoutX="72.0" layoutY="146.0" prefHeight="27.0" prefWidth="177.0" promptText="Emaill" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
                <font>
                   <Font size="14.0" />
                </font>
             </TextField>
-            <PasswordField fx:id="pbPasswordcheck" layoutX="56.0" layoutY="226.0" prefHeight="17.0" prefWidth="174.0" promptText=" Password check" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
+            <PasswordField fx:id="pbPasswordcheck" layoutX="73.0" layoutY="245.0" prefHeight="17.0" prefWidth="174.0" promptText=" Password check" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
                <font>
                   <Font size="14.0" />
                </font>
