--- a/src/main/resources/HeadPage.fxml
+++ b/src/main/resources/HeadPage.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -16,7 +15,7 @@
     <top>
         <AnchorPane prefHeight="89.0" prefWidth="860.0" style="-fx-background-color: #022235;" BorderPane.alignment="CENTER">
             <children>
-                <TextField alignment="CENTER" layoutX="322.0" layoutY="30.0" prefHeight="46.0" prefWidth="350.0" promptText="Search" style="-fx-border-color: #ffffff; -fx-border-width: 0px 0px 2px 0px; -fx-background-color: #022235;">
+                <TextField fx:id="tbSearch" alignment="CENTER" layoutX="322.0" layoutY="30.0" prefHeight="46.0" prefWidth="350.0" promptText="Search" style="-fx-border-color: #ffffff; -fx-border-width: 0px 0px 2px 0px; -fx-background-color: #022235;">
                     <font>
                         <Font size="20.0" />
                     </font>
@@ -31,9 +30,7 @@
                   <Font size="27.0" />
                </font>
             </Label>
-            <FontAwesomeIconView fill="WHITE" glyphName="USER" layoutX="744.0" layoutY="67.0" size="40" wrappingWidth="24.142857551574707" />
-            <FontAwesomeIconView fill="WHITE" glyphName="SEARCH" layoutX="297.0" layoutY="67.0" size="25" wrappingWidth="24.142857551574707" />
-            <FontAwesomeIconView fill="WHITE" glyphName="GEAR" layoutX="803.0" layoutY="67.0" size="40" />
+
             </children>
         </AnchorPane>
     </top>
