--- a/src/main/resources/Login.fxml
+++ b/src/main/resources/Login.fxml
@@ -16,7 +16,7 @@
          <children>
             <ImageView fitHeight="583.0" fitWidth="592.0" layoutX="-186.0" layoutY="-55.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@SpeisenOase-Logo.jpg" />
+                  <Image url="@images/other/SpeisenOase-Logo.jpg" />
                </image>
             </ImageView>
          </children>
