--- a/src/main/resources/MainPage.fxml
+++ b/src/main/resources/MainPage.fxml
@@ -22,7 +22,7 @@
                 </TextField>
             <ImageView fitHeight="115.0" fitWidth="108.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@SpeisenOase-Logo.jpg" />
+                  <Image url="@images/other/SpeisenOase-Logo.jpg" />
                </image>
             </ImageView>
             <Label layoutX="126.0" layoutY="33.0" opacity="0.58" text="Speisenoase" textFill="WHITE">
@@ -51,7 +51,7 @@
                      <graphic>
                         <ImageView fitHeight="57.0" fitWidth="131.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@Apple.png" />
+                              <Image url="@images/icons/Apple.png" />
                            </image>
                         </ImageView>
                      </graphic>
