--- a/src/main/resources/Register.fxml
+++ b/src/main/resources/Register.fxml
@@ -16,7 +16,7 @@
             <children>
             <ImageView fitHeight="577.0" fitWidth="715.0" layoutX="-180.0" layoutY="-56.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@SpeisenOase-Logo.jpg" />
+                  <Image url="@images/other/SpeisenOase-Logo.jpg" />
                </image>
             </ImageView>
             </children>
