--- a/src/main/resources/MainPage.fxml
+++ b/src/main/resources/MainPage.fxml
@@ -13,23 +13,33 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.ControllerMainPage">
     <top>
-        <AnchorPane prefHeight="89.0" prefWidth="860.0" style="-fx-background-color: #022235;" BorderPane.alignment="CENTER">
+        <AnchorPane prefHeight="71.0" prefWidth="860.0" style="-fx-background-color: #022235;" BorderPane.alignment="CENTER">
             <children>
-                <TextField fx:id="tbSearch" alignment="CENTER" layoutX="322.0" layoutY="30.0" prefHeight="46.0" prefWidth="350.0" promptText="Search" style="-fx-border-color: #ffffff; -fx-border-width: 0px 0px 2px 0px; -fx-background-color: #022235;">
+                <TextField fx:id="tbSearch" alignment="CENTER" layoutX="255.0" layoutY="31.0" prefHeight="46.0" prefWidth="350.0" promptText="Search" style="-fx-border-color: #ffffff; -fx-border-width: 0px 0px 2px 0px; -fx-background-color: #022235;">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </TextField>
-            <ImageView fitHeight="115.0" fitWidth="108.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="103.0" fitWidth="108.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/other/SpeisenOase-Logo.jpg" />
                </image>
             </ImageView>
-            <Label layoutX="126.0" layoutY="33.0" opacity="0.58" text="Speisenoase" textFill="WHITE">
-               <font>
-                  <Font size="27.0" />
-               </font>
-            </Label>
+            <Button layoutX="782.0" layoutY="33.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="40.0" style="-fx-background-color: #022235;">
+               <graphic>
+                  <ImageView fx:id="btProfil" fitHeight="39.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons/benutzerform.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button layoutX="739.0" layoutY="32.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="40.0" style="-fx-background-color: #022235;" />
+            <ImageView fx:id="btShoppingcart" fitHeight="39.0" fitWidth="35.0" layoutX="625.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/icons/einkaufswagen-schwarze-form.png" />
+               </image>
+            </ImageView>
 
             </children>
         </AnchorPane>
@@ -37,9 +47,9 @@
     <left>
         <AnchorPane prefHeight="445.0" prefWidth="107.0" BorderPane.alignment="CENTER">
             <children>
-                <VBox prefHeight="466.0" prefWidth="125.0" style="-fx-background-color: #01212E;" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
+                <VBox prefHeight="451.0" prefWidth="72.0" style="-fx-background-color: #123626;" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="0.0">
                     <children>
-                        <Button fx:id="btVegetable1" mnemonicParsing="false" onAction="#checkBtVegetablesClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #F6ECCB;" text="Vegetable" textFill="WHITE">
+                        <Button fx:id="btVegetable1" mnemonicParsing="false" onAction="#checkBtVegetablesClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #123626; -fx-border-color: #F6ECCB;" text="Vegetable" textFill="WHITE">
                             <font>
                                 <Font name="System Bold" size="17.0" />
                             </font>
@@ -48,13 +58,6 @@
                             <font>
                                 <Font name="System Bold" size="17.0" />
                             </font>
-                     <graphic>
-                        <ImageView fitHeight="57.0" fitWidth="131.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/icons/Apple.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
                         </Button>
                         <Button fx:id="btSweeties" mnemonicParsing="false" onAction="#checkBtSweetiesClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="Sweeties" textFill="WHITE">
                             <font>
@@ -71,6 +74,11 @@
                                 <Font name="System Bold" size="17.0" />
                             </font>
                         </Button>
+                  <Button fx:id="btBackery1" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="bakery" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="17.0" />
+                     </font>
+                  </Button>
                     </children>
                 </VBox>
             </children>
@@ -79,9 +87,9 @@
    <center>
       <ScrollPane prefHeight="465.0" prefWidth="716.0" style="-fx-background-color: #D2D9BF;" BorderPane.alignment="CENTER">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="697.0" prefWidth="720.0" style="-fx-background-color: #F6ECCB;">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="697.0" prefWidth="741.0" style="-fx-background-color: #ffffff;">
                <children>
-                  <Label layoutX="262.0" layoutY="127.0" prefHeight="103.0" prefWidth="111.0" text="Jan" textFill="WHITE">
+                  <Label layoutX="36.0" layoutY="127.0" prefHeight="103.0" prefWidth="449.0" text="Coming soon" textFill="RED">
                      <font>
                         <Font size="70.0" />
                      </font>
