--- a/src/main/resources/MainPage.fxml
+++ b/src/main/resources/MainPage.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,77 +15,42 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.ControllerMainPage">
     <top>
-        <AnchorPane prefHeight="71.0" prefWidth="860.0" style="-fx-background-color: #022235;" BorderPane.alignment="CENTER">
+        <AnchorPane prefHeight="81.0" prefWidth="860.0" style="-fx-background-color: #022235;" BorderPane.alignment="CENTER">
             <children>
-                <TextField fx:id="tbSearch" alignment="CENTER" layoutX="255.0" layoutY="31.0" prefHeight="46.0" prefWidth="350.0" promptText="Search" style="-fx-border-color: #ffffff; -fx-border-width: 0px 0px 2px 0px; -fx-background-color: #022235;">
+                <TextField fx:id="tbSearch" alignment="CENTER" layoutX="407.0" layoutY="22.0" prefHeight="37.0" prefWidth="350.0" promptText="Search" style="-fx-border-color: #ffffff; -fx-border-width: 0px 0px 2px 0px; -fx-background-color: #022235;">
                     <font>
-                        <Font size="20.0" />
+                        <Font size="18.0" />
                     </font>
                 </TextField>
-            <ImageView fitHeight="103.0" fitWidth="108.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="94.0" fitWidth="91.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/other/SpeisenOase-Logo.jpg" />
                </image>
             </ImageView>
-            <Button layoutX="782.0" layoutY="33.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="40.0" style="-fx-background-color: #022235;">
+            <Button fx:id="btProfil" layoutX="122.0" layoutY="19.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="207.0" style="-fx-background-color: #022235;" text="Username" textFill="WHITE">
                <graphic>
-                  <ImageView fx:id="btProfil" fitHeight="39.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="btProfil" fitHeight="27.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@images/icons/benutzerform.png" />
                      </image>
                   </ImageView>
                </graphic>
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
             </Button>
-            <Button layoutX="739.0" layoutY="32.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="40.0" style="-fx-background-color: #022235;" />
-            <ImageView fx:id="btShoppingcart" fitHeight="39.0" fitWidth="35.0" layoutX="625.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/icons/einkaufswagen-schwarze-form.png" />
-               </image>
-            </ImageView>
+            <Button fx:id="btShoppingcart" layoutX="783.0" layoutY="11.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: white; -fx-background-radius: 100px; -fx-border-radius: 100px; -fx-border-width: 5px; -fx-border-color: white;">
+               <graphic>
+                  <ImageView fx:id="btShoppingcart" fitHeight="39.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons/einkaufswagen-schwarze-form.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
 
             </children>
         </AnchorPane>
     </top>
-    <left>
-        <AnchorPane prefHeight="445.0" prefWidth="107.0" BorderPane.alignment="CENTER">
-            <children>
-                <VBox prefHeight="451.0" prefWidth="72.0" style="-fx-background-color: #123626;" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="0.0">
-                    <children>
-                        <Button fx:id="btVegetable1" mnemonicParsing="false" onAction="#checkBtVegetablesClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #123626; -fx-border-color: #F6ECCB;" text="Vegetable" textFill="WHITE">
-                            <font>
-                                <Font name="System Bold" size="17.0" />
-                            </font>
-                        </Button>
-                        <Button fx:id="btFruit" mnemonicParsing="false" onAction="#checkBtFruitClick" prefHeight="87.0" prefWidth="140.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="Fruit" textFill="WHITE">
-                            <font>
-                                <Font name="System Bold" size="17.0" />
-                            </font>
-                        </Button>
-                        <Button fx:id="btSweeties" mnemonicParsing="false" onAction="#checkBtSweetiesClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="Sweeties" textFill="WHITE">
-                            <font>
-                                <Font name="System Bold" size="17.0" />
-                            </font>
-                        </Button>
-                        <Button fx:id="btBackery" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="bakery" textFill="WHITE">
-                            <font>
-                                <Font name="System Bold" size="17.0" />
-                            </font>
-                        </Button>
-                        <Button fx:id="btLiquir" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="Liquir" textFill="WHITE">
-                            <font>
-                                <Font name="System Bold" size="17.0" />
-                            </font>
-                        </Button>
-                  <Button fx:id="btBackery1" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="bakery" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="17.0" />
-                     </font>
-                  </Button>
-                    </children>
-                </VBox>
-            </children>
-        </AnchorPane>
-    </left>
    <center>
       <ScrollPane prefHeight="465.0" prefWidth="716.0" style="-fx-background-color: #D2D9BF;" BorderPane.alignment="CENTER">
         <content>
@@ -94,9 +61,51 @@
                         <Font size="70.0" />
                      </font>
                   </Label>
+                  <TableView layoutX="14.0" layoutY="14.0" prefHeight="680.0" prefWidth="739.0">
+                    <columns>
+                      <TableColumn prefWidth="212.0" />
+                      <TableColumn minWidth="0.0" prefWidth="244.0" />
+                    </columns>
+                  </TableView>
                </children>
             </AnchorPane>
         </content>
       </ScrollPane>
    </center>
+   <left>
+          <VBox prefHeight="450.0" prefWidth="78.0" style="-fx-background-color: #123626;" BorderPane.alignment="CENTER">
+              <children>
+                  <Button fx:id="btVegetable1" mnemonicParsing="false" onAction="#checkBtVegetablesClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #123626; -fx-border-color: #F6ECCB;" text="Vegetable" textFill="WHITE">
+                      <font>
+                          <Font name="System Bold" size="17.0" />
+                      </font>
+                  </Button>
+                  <Button fx:id="btFruit" mnemonicParsing="false" onAction="#checkBtFruitClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="Fruit" textFill="WHITE">
+                      <font>
+                          <Font name="System Bold" size="17.0" />
+                      </font>
+                  </Button>
+                  <Button fx:id="btSweeties" mnemonicParsing="false" onAction="#checkBtSweetiesClick" prefHeight="100.0" prefWidth="100.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="Sweeties" textFill="WHITE">
+                      <font>
+                          <Font name="System Bold" size="17.0" />
+                      </font>
+                  </Button>
+                  <Button fx:id="btBackery" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="bakery" textFill="WHITE">
+                      <font>
+                          <Font name="System Bold" size="17.0" />
+                      </font>
+                  </Button>
+                  <Button fx:id="btLiquir" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="Liquir" textFill="WHITE">
+                      <font>
+                          <Font name="System Bold" size="17.0" />
+                      </font>
+                  </Button>
+            <Button fx:id="btBackery1" mnemonicParsing="false" onAction="#checkBtLiquirClick" prefHeight="100.0" prefWidth="135.0" style="-fx-background-color: #03334F; -fx-border-color: #ffffff;" text="bakery" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="17.0" />
+               </font>
+            </Button>
+              </children>
+          </VBox>
+   </left>
 </BorderPane>
