--- a/src/main/resources/MainPage.fxml
+++ b/src/main/resources/MainPage.fxml
@@ -27,7 +27,7 @@
             </ImageView>
             <Button fx:id="btProfil" layoutX="122.0" layoutY="19.0" mnemonicParsing="false" onAction="#checkBtProfilClick" prefHeight="51.0" prefWidth="207.0" style="-fx-background-color: #022235;" text="Username" textFill="WHITE">
                <graphic>
-                  <ImageView fx:id="btProfil" fitHeight="27.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="27.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@images/icons/benutzerform.png" />
                      </image>
@@ -39,7 +39,7 @@
             </Button>
             <Button fx:id="btShoppingcart" layoutX="783.0" layoutY="11.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: white; -fx-background-radius: 100px; -fx-border-radius: 100px; -fx-border-width: 5px; -fx-border-color: white;">
                <graphic>
-                  <ImageView fx:id="btShoppingcart" fitHeight="39.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="39.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@images/icons/einkaufswagen-farbig.png" />
                      </image>
