--- a/src/main/resources/MainPage.fxml
+++ b/src/main/resources/MainPage.fxml
@@ -36,7 +36,7 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="btShoppingcart" layoutX="783.0" layoutY="11.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: white; -fx-background-radius: 100px; -fx-border-radius: 100px; -fx-border-width: 5px; -fx-border-color: white;" AnchorPane.rightAnchor="14.0">
+            <Button layoutX="783.0" layoutY="11.0" mnemonicParsing="false" onAction="#checkBtShoppingCartClick" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: white; -fx-background-radius: 100px; -fx-border-radius: 100px; -fx-border-width: 5px; -fx-border-color: white;" AnchorPane.rightAnchor="14.0">
                <graphic>
                   <ImageView fitHeight="39.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                      <image>
